# z3-app-www

./: Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json
src/: main.rs
templates/html/: main.html
