[package]
name = "z3-app-www"
version = "1.0.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.46.0", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
askama = "0.14.0"
tower-http = { version = "0.6.6", features = ["fs", "compression-gzip"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
